Adjust spacing under fixed nav bar for mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -448,6 +448,10 @@ textarea {
         font-size: 100%;
     }
     
+    .spacing-under-nav {
+        top: -85px;
+    }
+    
     #menu, #logo {
         line-height: 40px;
     }
